2011-05-19  Paul Eggert  <eggert@cs.ucla.edu>

	intprops: TYPE_IS_INTEGER, TYPE_SIGNED not integer constant exprs
	* doc/intprops.texi (Integer Type Determination): Fix
	documentation for TYPE_IS_INTEGER: it returns an constant
	expression, not an integer constant expression.  Fix doc for
	TYPE_SIGNED: it returns an integer constant expression only if its
	argument is an integer type.  (TYPE_IS_INTEGER is the same, but is
	hardly worth documented that way....)

2011-05-18  Eric Blake  <eblake@redhat.com>

	fnmatch: avoid compiler warning
	* lib/fnmatch_loop.c (FCT): Use correct type.
	Reported by Matthias Bolte.

2011-05-13  Jim Meyering  <meyering@redhat.com>

	maint.mk: three new prohibit_<HDR>_without_use rules
	* top/maint.mk (sc_prohibit_stdio--_without_use): New rule.
	(sc_prohibit_stdio-safer_without_use): Likewise.
	(sc_prohibit_xfreopen_without_use): Likewise.

2011-05-17  Jim Meyering  <meyering@redhat.com>

	announce-gen: fail if the NEWS delta is empty
	If there's nothing noteworthy in NEWS, then either you forgot
	or you shouldn't be releasing.
	* build-aux/announce-gen: Die if the NEWS delta is effectively empty.

2011-05-17  Pádraig Brady <P@draigBrady.com>

	* top/maint.mk (_gl_tight_scope:): Automatically exclude compiler
	reserved symbols starting with double underscore from the check.

2011-05-17  Paul Eggert  <eggert@cs.ucla.edu>

	intprops: add doc
	* doc/intprops.texi: New file, documenting intprops.
	* doc/gnulib.texi (Particular Modules): Include it.

	verify: add doc to gnulib manual and fix example
	* doc/gnulib.texi (Compile-time Assertions): New node, for 'verify'.
	* doc/verify.texi (Compile-time Assertions): Update 'assert' doc.
	(Compile-time Assertions): Fix example so it can't overflow.

2011-05-17  Jim Meyering  <meyering@redhat.com>

	warnings.m4: don't usurp save_CPPFLAGS variable name
	* m4/warnings.m4: Prefix local temporary variable name with gl_.

	doc: fix typo
	* doc/gnulib-intro.texi (Target Platforms): s/is/are/
