@@ -1,5 +1,10 @@
 2011-05-19  Paul Eggert  <eggert@cs.ucla.edu>
 
+	intprops: work around C compiler bugs
+	* lib/intprops.h (INT_MULTIPLY_RANGE_OVERFLOW): Work around compiler
+	bug in Sun C 5.11 2010/08/13 and other compilers; see
+	<http://lists.gnu.org/archive/html/bug-gnulib/2011-05/msg00401.html>.
+
 	intprops: TYPE_IS_INTEGER, TYPE_SIGNED not integer constant exprs
 	* doc/intprops.texi (Integer Type Determination): Fix
 	documentation for TYPE_IS_INTEGER: it returns an constant
